* Fixed WebApp view on mobile home-screen

--- a/src/app/header/navigator/navigator.component.css
+++ b/src/app/header/navigator/navigator.component.css
@@ -134,6 +134,18 @@ a:hover {
   a {
     color: #f1f1f1;
   }
+
+  .return-footer {
+    display: none;
+    color: #818181;
+    align-self: center;
+    margin-bottom: 5%;
+  }
+
+  .return-footer > * {
+    margin: 0;
+    text-align: center;
+  }
 }
 
 @media (max-height: 480px) {
